--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -157,7 +157,7 @@
       <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
         <div class="Grid-cell">
           <div class="element">
-            <h1>SEER</h1>
+            <h1 class="colorSEER">SEER</h1>
 
 
             <h4> Reddit<img class="IconS" src="Reddit.svg" alt="Placeholder">
@@ -184,7 +184,7 @@
         <li><a href="#findings">Research &#38; Findings</a>
           <ul>
             <li class=""><a href="#userJourney">User journey</a></li>
-            <li class=""><a href="#personas">Personas </a></li>
+            <li class=""><a href="#RedditAPI">Reddit API </a></li>
           </ul>
         </li>
 
@@ -351,48 +351,65 @@
         </div>
         <!-- user Journey -->
       </section>
-      <div class="blankHS"></div>
 
-      <section id="personas" class="">
+      <section id="RedditAPI">
 
-        <!-- Arrow -->
-        <div class="wrapper">
-          <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="Grid">
-                  <p class="tArrow"> Personas</p>
-                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <div class="BGseer2_1">
+          <div class="blankHS"></div>
+
+
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="Grid">
+                    <p class="tArrow"> Data from Reddit API</p>
+                    <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <!-- Arrow -->
-        <div class="blankHS"></div>
-        <!-- Personas -->
-        <div class="wrapper">
-          <div class="Grid Grid--full u-textCenter">
-            <div class="Grid-cell">
-              <div class="element">
-                <img class="" src="../../Placeholder.svg" alt="Placeholder">
-                <div class="blankHS"></div>
+          <!-- Arrow -->
+          <div class="blankHS"></div>
+          <!-- Reddit API -->
 
-                <h5> <strong>Insights:</strong> x</h5>
-              </div>
-              <div class="blankHS"></div>
+          <div class="wrapper">
+            <!-- user Journey -->
+            <div class="wrapper">
+              <div class="Grid Grid--full u-textCenter">
+                <div class="Grid-cell">
+                  <div class="element">
+                    <div class="elementInner cardBG">
+                      <img class="iconM" src="icon_Reddit.svg" alt="icon">
 
-              <div class="element">
-                <img class="" src="../../Placeholder.svg" alt="Placeholder">
-                <div class="blankHS"></div>
-                <h5> <strong>Insights:</strong> x</h5>
+                      <div class="blankHXS"></div>
+                      <h5> <strong> Reddit API </strong> </h5>
+  
+                    </div>
+                  </div>
+                </div>
+                <div class="Grid-cell">
+                  <div class="element">
+
+                    <img class="" src="RedditTable.svg" alt="Placeholder">
+
+                  </div>
+                </div>
+
               </div>
             </div>
+            <!-- user Journey -->
+
           </div>
+          <div class="blankHS"></div>
+
         </div>
-        <!-- Personas -->
+        <!-- Reddit API -->
       </section>
     </section>
+    <div class="elementSeerDivider"></div>
 
 
     <section id="ideation">
@@ -423,7 +440,7 @@
 
             <div class="Grid-cell">
               <div class="element">
-                <div class="elementInner cardBG ">
+                <div class="elementInner cardBG">
                   <img class="iconM" src="icon_User.svg" alt="icon">
 
                   <div class="blankHXS"></div>
@@ -452,8 +469,8 @@
                   <div class="blankHXS"></div>
                   <h5> <strong> Queries Reddit post API </strong> </h5>
                   <ul class="liNone">
-                    <li> Mid-level front-end</li>
-                    <li> Senior product manager</li>
+                    <li> Keywords</li>
+                    <li> Sentiment score</li>
                   </ul>
                 </div>
               </div>
@@ -512,7 +529,7 @@
 
       <!-- Arrow -->
 
-      <div class="BGseer1">
+      <div class="BGseer1_1">
         <div class="blankHS"></div>
 
         <div class="wrapper">
@@ -542,8 +559,8 @@
                   <div class="blankHXS"></div>
                   <h5> <strong> Create keywords </strong> </h5>
                   <ul>
-                    <li> Combine team members' availability</li>
-                    <li> Schedule interviews base on availability </li>
+                    <li> Create keywords</li>
+                    <li> Save keywords </li>
                   </ul>
                 </div>
               </div>
@@ -551,14 +568,12 @@
             <div class="Grid-cell element">
               <div class="elementSEER">
                 <div class="elementInnerSEER heightM">
-                  <img class="iconM" src="icon_CurrentState.svg" alt="icon">
+                  <img class="iconM" src="icon_Alert.svg" alt="icon">
 
                   <div class="blankHXS"></div>
                   <h5> <strong> Notification </strong> </h5>
                   <ul>
-                    <li> Portfolio review</li>
-                    <li> Phone screen </li>
-                    <li> Frond end </li>
+                    <li> Keywords notification setting</li>
                   </ul>
                 </div>
               </div>
@@ -566,14 +581,13 @@
             <div class="Grid-cell element">
               <div class="elementSEER">
                 <div class="elementInnerSEER heightM">
-                  <img class="iconM" src="icon_CurrentState.svg" alt="icon">
+                  <img class="iconM" src="icon_Compare.svg" alt="icon">
 
                   <div class="blankHXS"></div>
                   <h5> <strong> Data Comparison </strong> </h5>
                   <ul>
-                    <li> Mid-level front-end</li>
-                    <li> Senior product manager</li>
-                    <li> Staff designer</li>
+                    <li> Save results</li>
+                    <li> Compare result side by side</li>
 
                   </ul>
                 </div>
@@ -586,12 +600,14 @@
             <div class="Grid-cell element">
               <div class="elementSEER">
                 <div class="elementInnerSEER heightM">
-                  <img class="iconM" src="icon_CurrentState.svg" alt="icon">
+                  <img class="iconM" src="icon_Chart.svg" alt="icon">
                   <div class="blankHXS"></div>
                   <h5> <strong> Dashboard </strong> </h5>
                   <ul>
-                    <li> Combine team members' availability</li>
-                    <li> Schedule interviews base on availability </li>
+                    <li> Table - </li>
+                    <li> Pie Charts - </li>
+                    <li>Line Graphs - time and change</li>
+                    <li>Bar Charts</li>
                   </ul>
                 </div>
               </div>
@@ -599,14 +615,14 @@
             <div class="Grid-cell element">
               <div class="elementSEER">
                 <div class="elementInnerSEER heightM">
-                  <img class="iconM" src="icon_CurrentState.svg" alt="icon">
+                  <img class="iconM" src="icon_Data.svg" alt="icon">
 
                   <div class="blankHXS"></div>
                   <h5> <strong>Data explore/drill down </strong> </h5>
                   <ul>
-                    <li> Portfolio review</li>
-                    <li> Phone screen </li>
-                    <li> Frond end </li>
+                    <li> From overall data view to the details</li>
+                    <li> Filter the data to get more details</li>
+
                   </ul>
                 </div>
               </div>
@@ -614,14 +630,12 @@
             <div class="Grid-cell element">
               <div class="elementSEER">
                 <div class="elementInnerSEER heightM">
-                  <img class="iconM" src="icon_CurrentState.svg" alt="icon">
+                  <img class="iconM" src="icon_Download.svg" alt="icon">
 
                   <div class="blankHXS"></div>
                   <h5> <strong> Export Data </strong> </h5>
                   <ul>
-                    <li> Mid-level front-end</li>
-                    <li> Senior product manager</li>
-                    <li> Staff designer</li>
+                    <li> Export data share with team</li>
 
                   </ul>
                 </div>
