--- a/project/index.html
+++ b/project/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Vicky Wang | Product Designer | UI/UX Designer | Projects </title>
+  <title>Vicky W. | Product Designer | UI/UX Designer | Projects </title>
   <meta name="keywords"
     content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
   <meta name="author" content="Vicky Wang">
@@ -203,7 +203,7 @@
               <div class="element">
                 <div class="element">
                   <h5>For scheduling interview</h5>
-                  <h3 class="arrCard">APPOINTA</h3>
+                  <h3 class="arrCard colorBlack">APPOINTA</h3>
                   <h5>Appointa is designed for recruiters, managers, and candidates to schedule,
                     reschedule, or cancel appointments. All in one App, sync calendars, easy to
                     share availability between team members and candidates.</h5>
@@ -222,7 +222,7 @@
               <div class="element">
                 <div class="element">
                   <h5>For grow business</h5>
-                  <h3 class="arrCard">SEER</h3>
+                  <h3 class="arrCard colorBlack">SEER</h3>
                   <!--Analysis Report-->
                   <h5>SEER is designed for analysis of business sentiment scores based on the input
                     keywords. It connects to different social network platforms with API. Covert
