--- a/project/meal_planner/index.html
+++ b/project/meal_planner/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Vicky Wang | Product Designer | UI/UX Designer | Meal Planner</title>
+  <title>Vicky W. | Product Designer | UI/UX Designer | Meal Planner</title>
   <meta name="description" content="Vicky Wang's Portfolio">
   <meta name="keywords"
     content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
