--- a/photography/index.html
+++ b/photography/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Vicky Wang | Product Designer | UI/UX Designer | Photography</title>
+  <title>Vicky W. | Product Designer | UI/UX Designer | Photography</title>
   <meta name="keywords"
     content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
   <meta name="author" content="Vicky Wang">
