--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@
         from the understanding of user needs and the business itself.
       </p>
       <p> I built and update this website myself from scratch using HTML/CSS/JS deployed on AWS.
-        Please visit my <a href="https://github.com/vicky-wyq" class="textIntro" target="_blank">GitHub</a>
+        Please visit my <a href="https://github.com/vicky-wyq" class="textIntro"
+          target="_blank">GitHub</a>
         repository for more details.
       </p>
     </div>
@@ -603,25 +604,27 @@
   </button>
   <!--back to top-->
   <!--footer-->
-  <div class="footer">
-    <p class="footer-left"> &#169; 2022 &#8212; VICKY WANG
-    </p>
-    <div class="footer-right">
-      <a href="mailto:vickyw.design@gmail.com">
-        <img class="footer-logo" src="./icon/mail.svg" alt="email">
-      </a>
+  <div class="colorBgGrey">
+    <div class="footer">
+      <p class="footer-left"> &#169; 2022 &#8212; VICKY WANG
+      </p>
+      <div class="footer-right">
+        <a href="mailto:vickyw.design@gmail.com">
+          <img class="footer-logo" src="./icon/mail.svg" alt="email">
+        </a>
 
-      <a href="https://www.linkedin.com/in/vicky-wyq/">
-        <img class="footer-logo" src="./icon/in.svg" alt="linkedIn">
-      </a>
+        <a href="https://www.linkedin.com/in/vicky-wyq/">
+          <img class="footer-logo" src="./icon/in.svg" alt="linkedIn">
+        </a>
 
-      <a href="https://github.com/vicky-wyq">
-        <img class="footer-logo" src="./icon/git.svg" alt="github">
-      </a>
+        <a href="https://github.com/vicky-wyq">
+          <img class="footer-logo" src="./icon/git.svg" alt="github">
+        </a>
 
-      <a href="https://www.instagram.com/vw_yiqi/">
-        <img class="footer-logo" src="./icon/ins.svg" alt="Instagram">
-      </a>
+        <a href="https://www.instagram.com/vw_yiqi/">
+          <img class="footer-logo" src="./icon/ins.svg" alt="Instagram">
+        </a>
+      </div>
     </div>
   </div>
   <!--footer-->
