--- a/photography/index.html
+++ b/photography/index.html
@@ -128,10 +128,13 @@
 
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item inactive "><a href="/project" class="nav-link box font300-1080">PROJECT</a></li>
-          <li class="nav-item inactive"><a href="/architecture"class="nav-link box font300-1080">ARCHITECTURE</a>
+          <li class="nav-item inactive "><a href="/project"
+              class="nav-link box font300-1080">PROJECT</a></li>
+          <li class="nav-item inactive"><a href="/architecture"
+              class="nav-link box font300-1080">ARCHITECTURE</a>
           </li>
-          <li class="nav-item active greenNav"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
+          <li class="nav-item active greenNav"><a href="/photography"
+              class="nav-link box">PHOTOGRAPHY</a>
           </li>
           <li class="nav-item inactive"><a href="/" class="nav-link box font300-1080">ABOUT</a></li>
         </ul>
@@ -150,7 +153,9 @@
   <!--intro-->
   <div class="wrapper element">
     <div class="intro">
-      <strong> <h1 class="t-hi">I'm Vicky.</h1></strong>  
+      <strong>
+        <h1 class="t-hi">I'm Vicky.</h1>
+      </strong>
     </div>
     <div class="blankHXS"></div>
 
@@ -494,7 +499,7 @@
             <img src="./17.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Nature</h5>
-              <h3>Donner Lake              </h3>
+              <h3>Donner Lake </h3>
               <p class="lineHorizAll"></p>
               <h6> December, 2020</h6>
               <h6> Canon 5d mark iii | EF 70-200mm f/2.8L IS </h6>
@@ -508,7 +513,7 @@
             <img src="./16.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Nature</h5>
-              <h3>Taos Pueblo Indian Reservation              </h3>
+              <h3>Taos Pueblo Indian Reservation </h3>
               <p class="lineHorizAll"></p>
               <h6> December, 2019</h6>
               <h6> Canon 5d mark iii | EF 70-200mm f/2.8L IS </h6>
@@ -577,7 +582,7 @@
             <img src="./10.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Nature</h5>
-              <h3>White Sands National Monument              </h3>
+              <h3>White Sands National Monument </h3>
               <p class="lineHorizAll"></p>
               <h6> December, 2019</h6>
               <h6> Canon 5d mark iii | EF 70-200mm f/2.8L IS </h6>
@@ -606,25 +611,28 @@
   </button>
   <!--back to top-->
   <!--footer-->
-  <div class="footer">
-    <p class="footer-left"> &#169; 2022 &#8212; VICKY WANG
-    </p>
-    <div class="footer-right">
-      <a href="mailto:vickyw.design@gmail.com">
-        <img class="footer-logo" src="../icon/mail.svg" alt="email">
-      </a>
+  <div class="colorBgGrey">
 
-      <a href="https://www.linkedin.com/in/vicky-wyq/">
-        <img class="footer-logo" src="../icon/in.svg" alt="linkedin">
-      </a>
+    <div class="footer">
+      <p class="footer-left"> &#169; 2022 &#8212; VICKY WANG
+      </p>
+      <div class="footer-right">
+        <a href="mailto:vickyw.design@gmail.com">
+          <img class="footer-logo" src="../icon/mail.svg" alt="email">
+        </a>
 
-      <a href="https://github.com/vicky-wyq">
-        <img class="footer-logo" src="../icon/git.svg" alt="github">
-      </a>
+        <a href="https://www.linkedin.com/in/vicky-wyq/">
+          <img class="footer-logo" src="../icon/in.svg" alt="linkedin">
+        </a>
 
-      <a href="https://www.instagram.com/vw_yiqi/">
-        <img class="footer-logo" src="../icon/ins.svg" alt="medium">
-      </a>
+        <a href="https://github.com/vicky-wyq">
+          <img class="footer-logo" src="../icon/git.svg" alt="github">
+        </a>
+
+        <a href="https://www.instagram.com/vw_yiqi/">
+          <img class="footer-logo" src="../icon/ins.svg" alt="medium">
+        </a>
+      </div>
     </div>
   </div>
   <!--footer-->
