--- a/project/gardeners_hub/index.html
+++ b/project/gardeners_hub/index.html
@@ -135,7 +135,8 @@
       <div class="column widthMPhHalf">
         <h2>GARDENERS HUB</h2>
         <p class="lineHorizAll"></p>
-        <p class="textS"> <strong>My Role:</strong> &nbsp; Design Research, UX/UI Design, Wireframing, Branding, Prototyping, Usability Testing
+        <p class="textS"> <strong>My Role:</strong> &nbsp; Design Research, UX/UI Design,
+          Wireframing, Branding, Prototyping, Usability Testing
         </p>
         <p class="textS"> <strong>Skills and Tools:</strong> &nbsp;
           HTML, CSS, JavaScript, JQuery,
@@ -303,9 +304,9 @@
   <!--Problem and solution-->
   <div class="rowChng align-top wrapper ">
     <div class="column">
-      <h3 >PROBLEMS</h3>
+      <h3>PROBLEMS</h3>
       <p class="lineHorizAll"></p>
-      <h5 >Gardeners Hub Application aims to build the local market
+      <h5>Gardeners Hub Application aims to build the local market
         network
         and improve the horticultural experience by offering more comprehensive local market
         networking opportunities to the gardeners that result in reducing wasting resources and
@@ -317,9 +318,9 @@
     <div class="lineVerAll">
     </div>
     <div class="column">
-      <h3 >SOLUTIONS</h3>
+      <h3>SOLUTIONS</h3>
       <p class="lineHorizAll"></p>
-      <h5 >Gardeners' Hub provides a local marketplace platform to help gardeners
+      <h5>Gardeners' Hub provides a local marketplace platform to help gardeners
         reduce wasting resources and a regional social network with the local community.
       </h5>
     </div>
@@ -327,7 +328,7 @@
     <div class="column">
       <h3>PROCESS</h3>
       <p class="lineHorizAll"></p>
-      <h5 >The goal of this project is to find solutions and ideas to help
+      <h5>The goal of this project is to find solutions and ideas to help
         gardeners to improve their horticultural experience with neighbors and reduce wasting
         resources by selling or sharing locally.
 
@@ -345,8 +346,8 @@
     <div class="column centerVer">
       <h4 class="centerVer centerHorz colorGreyShadow circleGH ">Empathize </h4>
       <div class="blankHS"></div>
-      <h5 > &#183; User Research</h5>
-      <h5 > &#183; Competitive Analysis </h5>
+      <h5> &#183; User Research</h5>
+      <h5> &#183; Competitive Analysis </h5>
     </div>
 
     <P class="researchArr"></P>
@@ -355,17 +356,17 @@
       <h4 class="centerVer centerHorz colorGreyShadow circleGH  ">Define </h4>
       <div class="blankHS"></div>
 
-      <h5 > &#183; Contextual Inquiries </h5>
-      <h5 > &#183; Identifying Pain Points </h5>
+      <h5> &#183; Contextual Inquiries </h5>
+      <h5> &#183; Identifying Pain Points </h5>
     </div>
     <P class="researchArr"></P>
 
     <div class="column centerVer">
       <h4 class="centerVer centerHorz colorGreyShadow circleGH  ">Ideate </h4>
       <div class="blankHS"></div>
-      <h5 > &#183; Information Architecture</h5>
-      <h5 > &#183; User Flow </h5>
-      <h5 > &#183; Selected Initial Concepts </h5>
+      <h5> &#183; Information Architecture</h5>
+      <h5> &#183; User Flow </h5>
+      <h5> &#183; Selected Initial Concepts </h5>
     </div>
     <P class="researchArr"></P>
     <div class="column centerVer">
@@ -373,8 +374,8 @@
       </h4>
       <div class="blankHS"></div>
 
-      <h5 > &#183; Prototyping </h5>
-      <h5 > &#183; Iteration Testing</h5>
+      <h5> &#183; Prototyping </h5>
+      <h5> &#183; Iteration Testing</h5>
     </div>
     <P class="researchArr"></P>
 
@@ -382,9 +383,9 @@
       <h4 class="centerVer centerHorz colorGreyShadow circleGH  ">Final Design </h4>
       <div class="blankHS"></div>
 
-      <h5 > &#183; On-boarding</h5>
-      <h5 > &#183; Login & Register </h5>
-      <h5 > &#183; Content</h5>
+      <h5> &#183; On-boarding</h5>
+      <h5> &#183; Login & Register </h5>
+      <h5> &#183; Content</h5>
     </div>
 
 
@@ -1266,7 +1267,7 @@
 
     <div class="column">
       <P class="titleM centerHorz paddingL">Affinity Mapping Pain Points </P>
-      <img  src="affinity_mapping1.svg" alt="User Research">
+      <img src="affinity_mapping1.svg" alt="User Research">
     </div>
     <div class="blankHL"></div>
 
@@ -1275,13 +1276,13 @@
         similar notes
 
       </P>
-      <img  src="affinity_mapping2.svg" alt="User Research">
+      <img src="affinity_mapping2.svg" alt="User Research">
     </div>
     <div class="blankHL"></div>
 
     <div class="column">
       <P class="titleM centerHorz paddingL">Prioritise and label pain points </P>
-      <img  src="affinity_mapping3.svg" alt="User Research">
+      <img src="affinity_mapping3.svg" alt="User Research">
     </div>
   </div>
 
@@ -1338,8 +1339,8 @@
     <div class="blankHS"></div>
 
     <div class="centerHorz">
-        
-        <img class="widthL shadowFilter" src="ideation_infor_arch.svg" alt="User Research">
+
+      <img class="widthL shadowFilter" src="ideation_infor_arch.svg" alt="User Research">
     </div>
     <!-- information architecture -->
     <div class="blankHL"></div>
@@ -2929,10 +2930,10 @@
     <p class=" tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
     <p class="displayNonePhone textM centerHorz" data-aos="fade-up">Learn more about my works
       &nbsp; <a class="textProject" href="/project">here</a> </p>
-  
-  
+
+
     <div class="blankHL"></div>
-  
+
   </div>
   <!-- wireframes hi-fi -->
   <!-- 04 -->
@@ -2952,25 +2953,28 @@
 <!--back to top-->
 
 <!--footer-->
-<div class="footer">
-  <p class="footer-left"> &#169; 2021 &#8212; VICKY WANG
-  </p>
-  <div class="footer-right">
-    <a href="mailto:vickyw.design@gmail.com">
-      <img class="footer-logo" src="../../icon/mail.svg" alt="email">
-    </a>
+<div class="colorBgGrey">
 
-    <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b/">
-      <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
-    </a>
+  <div class="footer">
+    <p class="footer-left"> &#169; 2021 &#8212; VICKY WANG
+    </p>
+    <div class="footer-right">
+      <a href="mailto:vickyw.design@gmail.com">
+        <img class="footer-logo" src="../../icon/mail.svg" alt="email">
+      </a>
 
-    <a href="https://github.com/vicky-wyq">
-      <img class="footer-logo" src="../../icon/git.svg" alt="github">
-    </a>
+      <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b/">
+        <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
+      </a>
 
-    <a href="https://www.instagram.com/vw_yiqi/">
-      <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
-    </a>
+      <a href="https://github.com/vicky-wyq">
+        <img class="footer-logo" src="../../icon/git.svg" alt="github">
+      </a>
+
+      <a href="https://www.instagram.com/vw_yiqi/">
+        <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
+      </a>
+    </div>
   </div>
 </div>
 <!--footer-->
