--- a/project/index.html
+++ b/project/index.html
@@ -122,13 +122,16 @@
       <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item active greenNav"><a href="/project" class="nav-link box">PROJECT</a></li>
+          <li class="nav-item active greenNav"><a href="/project" class="nav-link box">PROJECT</a>
+          </li>
           <li class="nav-item inactive "><a href="/architecture"
               class="nav-link box font300-1080 ">ARCHITECTURE</a>
           </li>
-          <li class="nav-item inactive "><a href="/photography" class="nav-link box font300-1080">PHOTOGRAPHY</a>
+          <li class="nav-item inactive "><a href="/photography"
+              class="nav-link box font300-1080">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive "><a href="/" class="nav-link box font300-1080 ">ABOUT</a></li>
+          <li class="nav-item inactive "><a href="/" class="nav-link box font300-1080 ">ABOUT</a>
+          </li>
         </ul>
       </div>
       <div class="hamburger">
@@ -149,7 +152,9 @@
 
     <div class="intro" data-aos="fade-up">
       <div class="column">
-     <strong> <h1 class="t-hi">I'm Vicky.</h1></strong>  
+        <strong>
+          <h1 class="t-hi">I'm Vicky.</h1>
+        </strong>
       </div>
       <p class="divider"></p>
       <div class="column">
@@ -366,25 +371,28 @@
   </button>
   <!--back to top-->
   <!--footer-->
-  <div class="footer">
-    <p class="footer-left"> &#169; 2022 &#8212; VICKY WANG
-    </p>
-    <div class="footer-right">
-      <a href="mailto:vickyw.design@gmail.com">
-        <img class="footer-logo" src="../icon/mail.svg" alt="email">
-      </a>
+  <div class="colorBgGrey">
 
-      <a href="https://www.linkedin.com/in/vicky-wyq/">
-        <img class="footer-logo" src="../icon/in.svg" alt="linkedin">
-      </a>
+    <div class="footer">
+      <p class="footer-left"> &#169; 2022 &#8212; VICKY WANG
+      </p>
+      <div class="footer-right">
+        <a href="mailto:vickyw.design@gmail.com">
+          <img class="footer-logo" src="../icon/mail.svg" alt="email">
+        </a>
 
-      <a href="https://github.com/vicky-wyq">
-        <img class="footer-logo" src="../icon/git.svg" alt="github">
-      </a>
+        <a href="https://www.linkedin.com/in/vicky-wyq/">
+          <img class="footer-logo" src="../icon/in.svg" alt="linkedin">
+        </a>
 
-      <a href="https://www.instagram.com/vw_yiqi/">
-        <img class="footer-logo" src="../icon/ins.svg" alt="medium">
-      </a>
+        <a href="https://github.com/vicky-wyq">
+          <img class="footer-logo" src="../icon/git.svg" alt="github">
+        </a>
+
+        <a href="https://www.instagram.com/vw_yiqi/">
+          <img class="footer-logo" src="../icon/ins.svg" alt="medium">
+        </a>
+      </div>
     </div>
   </div>
   <!--footer-->
