--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -386,7 +386,7 @@
 
                       <div class="blankHXS"></div>
                       <h5> <strong> Reddit API </strong> </h5>
-  
+
                     </div>
                   </div>
                 </div>
@@ -685,6 +685,21 @@
           </div>
         </div>
         <!-- wireframes -->
+
+        <div class="Grid Grid--full wrapper">
+          <div class="Grid-cell">
+            <div class="element">
+              <h4>Sentiment analysis helps e-commerce, marketing, advertising, politics, market
+                research and more.</h4>
+              <h4>The customer support team is informed in real-time about any <strong
+                  class="textDecor SEER">negative comments</strong>.
+              </h4>
+              <h4>The mentions on social media get detected extremely quickly </h4>
+              <h4 class="leftVerLine SEER">The power of visuals released.</h4>
+
+            </div>
+          </div>
+        </div>
       </section>
       <div class="blankHS"></div>
 
@@ -695,7 +710,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="Grid">
-                  <p class="tArrow"> Mid-fi screen flow</p>
+                  <p class="tArrow"> Mid-fi screen screens</p>
                   <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
@@ -708,7 +723,19 @@
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <img class="modal-target" src="SEER.png" alt="Wireframes">
+              <img class="modal-target" src="Mid-fi_keyword.svg" alt="Wireframes">
+            </div>
+            <div class="Grid-cell wrapper">
+              <div class="element">
+                <h5> <strong>xxx&#58;</strong> xxx
+                </h5>
+              </div>
+            </div>
+          </div>
+
+          <div class="Grid-cell">
+            <div class="element">
+              <img class="modal-target" src="Mid-fi_ddashboard.svg" alt="Wireframes">
             </div>
             <div class="Grid-cell wrapper">
               <div class="element">
@@ -861,27 +888,30 @@
   <!--back to top-->
 
   <!--footer-->
-  <div class="footer">
-    <p class="footer-left"> &#169; 2022 &#8212; VICKY WANG
-    </p>
-    <div class="footer-right">
-      <a href="mailto:vickyw.design@gmail.com">
-        <img class="footer-logo" src="../../icon/mail.svg" alt="email">
-      </a>
+  <div class="colorBgGrey">
+    <div class="footer">
+      <p class="footer-left"> &#169; 2022 &#8212; VICKY WANG
+      </p>
+      <div class="footer-right">
+        <a href="mailto:vickyw.design@gmail.com">
+          <img class="footer-logo" src="../../icon/mail.svg" alt="email">
+        </a>
 
-      <a href="https://www.linkedin.com/in/vicky-wyq/">
-        <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
-      </a>
+        <a href="https://www.linkedin.com/in/vicky-wyq/">
+          <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
+        </a>
 
-      <a href="https://github.com/vicky-wyq">
-        <img class="footer-logo" src="../../icon/git.svg" alt="github">
-      </a>
+        <a href="https://github.com/vicky-wyq">
+          <img class="footer-logo" src="../../icon/git.svg" alt="github">
+        </a>
 
-      <a href="https://www.instagram.com/vw_yiqi/">
-        <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
-      </a>
+        <a href="https://www.instagram.com/vw_yiqi/">
+          <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
+        </a>
+      </div>
     </div>
   </div>
+
 
   <!--footer-->
 
