--- a/architecture/the_rotation_of_curves/index.html
+++ b/architecture/the_rotation_of_curves/index.html
@@ -417,25 +417,27 @@
 <!--back to top-->
 
 <!--footer-->
-<div class="footer">
-  <p class="footer-left"> &#169; 2021 &#8212; VICKY WANG
-  </p>
-  <div class="footer-right">
-    <a href="mailto:vickyw.design@gmail.com">
-      <img class="footer-logo" src="../../icon/mail.svg" alt="email">
-    </a>
+<div class="colorBgGrey">
+  <div class="footer">
+    <p class="footer-left"> &#169; 2021 &#8212; VICKY WANG
+    </p>
+    <div class="footer-right">
+      <a href="mailto:vickyw.design@gmail.com">
+        <img class="footer-logo" src="../../icon/mail.svg" alt="email">
+      </a>
 
-    <a href="https://www.linkedin.com/in/vicky-wyq/">
-      <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
-    </a>
+      <a href="https://www.linkedin.com/in/vicky-wyq/">
+        <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
+      </a>
 
-    <a href="https://github.com/vicky-wyq">
-      <img class="footer-logo" src="../../icon/git.svg" alt="github">
-    </a>
+      <a href="https://github.com/vicky-wyq">
+        <img class="footer-logo" src="../../icon/git.svg" alt="github">
+      </a>
 
-    <a href="https://www.instagram.com/vw_yiqi/">
-      <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
-    </a>
+      <a href="https://www.instagram.com/vw_yiqi/">
+        <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
+      </a>
+    </div>
   </div>
 </div>
 <!--footer-->
