--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -389,9 +389,9 @@
                 <h4 class="leftVerLine APPOINTA"> On average, recruiters are <strong
                     class="textDecor APPOINTA">spending ⅔ of their
                     overall hiring time on the interview process</strong>.</h4>
-                <h4 class="leftVerLine APPOINTA"> 67% of respondents say it takes between  <strong
-                  class="textDecor APPOINTA">30 minutes and 2 hours</strong> to
-                    schedule a single interview.</h4>
+                <h4 class="leftVerLine APPOINTA"> 67% of respondents say it takes between <strong
+                    class="textDecor APPOINTA">30 minutes and 2 hours</strong> to
+                  schedule a single interview.</h4>
 
 
 
@@ -1694,28 +1694,30 @@
   <!--back to top-->
 
   <!--footer-->
-  <div class="footer">
-    <p class="footer-left"> &#169; 2022 &#8212; VICKY WANG
-    </p>
-    <div class="footer-right">
-      <a href="mailto:vickyw.design@gmail.com">
-        <img class="footer-logo" src="../../icon/mail.svg" alt="email">
-      </a>
+  <div class="colorBgGrey">
 
-      <a href="https://www.linkedin.com/in/vicky-wyq/">
-        <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
-      </a>
+    <div class="footer">
+      <p class="footer-left"> &#169; 2022 &#8212; VICKY WANG
+      </p>
+      <div class="footer-right">
+        <a href="mailto:vickyw.design@gmail.com">
+          <img class="footer-logo" src="../../icon/mail.svg" alt="email">
+        </a>
 
-      <a href="https://github.com/vicky-wyq">
-        <img class="footer-logo" src="../../icon/git.svg" alt="github">
-      </a>
+        <a href="https://www.linkedin.com/in/vicky-wyq/">
+          <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
+        </a>
 
-      <a href="https://www.instagram.com/vw_yiqi/">
-        <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
-      </a>
+        <a href="https://github.com/vicky-wyq">
+          <img class="footer-logo" src="../../icon/git.svg" alt="github">
+        </a>
+
+        <a href="https://www.instagram.com/vw_yiqi/">
+          <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
+        </a>
+      </div>
     </div>
   </div>
-
   <!--footer-->
 
 
