--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -685,21 +685,22 @@
           </div>
         </div>
         <!-- wireframes -->
-
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <h4>Sentiment analysis helps e-commerce, marketing, advertising, politics, market
-                research and more.</h4>
-              <h4>The customer support team is informed in real-time about any <strong
-                  class="textDecor SEER">negative comments</strong>.
-              </h4>
-              <h4>The mentions on social media get detected extremely quickly </h4>
-              <h4 class="leftVerLine SEER">The power of visuals released.</h4>
+              <h4>It takes two steps to see the keyword result on the dashboard</h4>
+              <h4 class="leftVerLine SEER"> Step one, set up the <strong
+                  class="textDecor SEER">keyword</strong></h4>
+              <h4 class="leftVerLine SEER"> step two, go to the dashboard to select the <strong
+                  class="textDecor SEER">time range</strong></h4>
+
+              <h4>I decide to have the left navigation panel. It including dashboard, keyword, and
+                setting tabs</h4>
 
             </div>
           </div>
         </div>
+
       </section>
       <div class="blankHS"></div>
 
@@ -723,29 +724,46 @@
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <img class="modal-target" src="Mid-fi_keyword.svg" alt="Wireframes">
+              <img class="modal-target shadowFilter" src="Mid-fi_keyword.svg" alt="Wireframes">
             </div>
             <div class="Grid-cell wrapper">
               <div class="element">
-                <h5> <strong>xxx&#58;</strong> xxx
-                </h5>
               </div>
             </div>
           </div>
 
           <div class="Grid-cell">
             <div class="element">
-              <img class="modal-target" src="Mid-fi_ddashboard.svg" alt="Wireframes">
+              <img class="modal-target shadowFilter" src="Mid-fi_ddashboard.svg" alt="Wireframes">
             </div>
             <div class="Grid-cell wrapper">
               <div class="element">
-                <h5> <strong>xxx&#58;</strong> xxx
-                </h5>
               </div>
             </div>
           </div>
         </div>
         <!-- mid-fiWireframes -->
+        <div class="Grid Grid--full wrapper">
+          <div class="Grid-cell">
+            <div class="element">
+              <h4>By thinking one step deeper about charts</h4>
+              <h4 class="leftVerLine SEER"> the <strong class="textDecor SEER">post count</strong>,
+                <strong class="textDecor SEER">upvote ratio</strong>, and <strong
+                  class="textDecor SEER">sentiment score</strong> are the most significant data for
+                the keywords
+              </h4>
+              <h4 class="leftVerLine SEER"> step two, go to the dashboard to select the <strong
+                  class="textDecor SEER">time range</strong></h4>
+
+              <h4>So I decide to use the <strong class="textDecor SEER">line chart</strong> to show
+                the post count, upvote ratio, and
+                sentiment score. and using one single <strong class="textDecor SEER">pie
+                  chart</strong> to show the combined date of Reddit
+                post count and communities </h4>
+
+            </div>
+          </div>
+        </div>
       </section>
       <section id="testing" class="BGseer2">
         <!-- Arrow -->
@@ -767,51 +785,50 @@
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <h4 class="leftVerLine SEER">User should be able to check how popular the posts were
-                and
-                what was the sentiment
-                behind them.</h4>
-            </div>
-          </div>
+              <h4>Tasks</h4>
 
-          <div class="Grid-cell">
-            <div class="element">
-              <h4 class="leftVerLine SEER">User should be able to check how popular the posts were
-                and
-                what was the sentiment
-                behind them.</h4>
-              <h4 class="leftVerLine SEER">The filter is important with data drill in feature </h4>
-
-
-
-              <h4>
-                e.g., negative sentiment or most popular posts, do some aggregations per <strong
-                  class="textDecor SEER">a specific time period </strong>,
-                browse data by <strong class="textDecor SEER">location</strong> or by the
-                <strong class="textDecor SEER">device</strong> from which it was posted.
+              <h4 class="leftVerLine SEER">Users should be able to <strong
+                  class="textDecor SEER">add and delete</strong> the <strong
+                  class="textDecor SEER">keywords</strong>
+              </h4>
+              <h4 class="leftVerLine SEER">Users should be able to see how popular the <strong
+                  class="textDecor SEER">keywords</strong> in
+                Reddit posts were and what was the <strong class="textDecor SEER">sentiment</strong>
+                behind them.
+              </h4>
+              <h4 class="leftVerLine SEER">Users should be able to <strong
+                  class="textDecor SEER">filter data</strong> by a certain date
+                range or a single date
               </h4>
 
-
-            </div>
-          </div>
-
-
-          <div class="Grid-cell">
-            <div class="element">
-
-              <h4 class="leftVerLine SEER">The power of visuals released.</h4>
-
-
-
-              <h4>Sentiment analysis helps e-commerce, marketing, advertising, politics, market
-                research and more.</h4>
-              <h4>The customer support team is informed in real-time about any <strong
-                  class="textDecor SEER">negative comments</strong>.
+              <h4 class="leftVerLine SEER">Users should be able to click the <strong
+                  class="textDecor SEER">link</strong> to see the
+                <strong class="textDecor SEER">original Reddit posts</strong>. For example, short
+                the table with negative sentiment or most
+                popular posts, open the most popular link to see the details
               </h4>
-              <h4>The mentions on social media get detected extremely quickly </h4>
 
             </div>
           </div>
+          <div class="Grid-cell">
+
+
+            <div class="element">
+              <h4>Feedback from the testing</h4>
+
+              <h4 class="leftVerLine SEER">It is a bit ambiguous to navigate from keywords to the
+                dashboard. each keyword has its own dashboard. Do I still need to have the dashboard
+                tag on the left navigation panel? Or only have a list of keywords, move the setting
+                to the top right. </strong>
+              </h4>
+              <h4 class="leftVerLine SEER">When comparing data, the user has to open two windows to
+                compare, maybe there is a better way to compare the data side by side </strong>
+              </h4>
+            </div>
+          </div>
+
+
+
         </div>
         <!-- testing -->
       </section>
@@ -829,7 +846,7 @@
       <div class="Grid Grid--full u-textCenter">
         <div class="Grid-cell">
           <h3 class="element">Key takeaways</h3>
-          <h5>Have design system set up before working on mockup</h5>
+          <h5>Understand users is important for design, in this dashboard design, understanding the way data works is also very important</h5>
           <h5></h5>
           <h5></h5>
         </div>
